Bug: redireccion www

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,8 +6,8 @@
     RewriteEngine On
     
     # Redirect from www to domain
-    RewriteCond %{HTTP_HOST} ^www.maet.dev [NC]
-    RewriteRule ^(.*)$ http://maet.dev/$1 [L,R=301]
+    RewriteCond %{HTTP_HOST} ^www.ci.maet.dev [NC]
+    RewriteRule ^(.*)$ http://ci.maet.dev/$1 [L,R=301]
     
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
